--- a/style.css
+++ b/style.css
@@ -42,12 +42,14 @@ h1{
     margin-bottom: 10px;
     font-weight: bolder;
     font-size: 0.9em;
+    margin-left: -10px;
 }
 .paragrafo2{
     text-align: center;
     margin-bottom: 20px;
     font-weight: bolder;
     font-size: 0.9em;
+    margin-left: -10px;
 }
 p{
     margin-left: 50px;
